--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -19,25 +19,26 @@ updates:
       # Jest upgrade is blocked because the vue-test-utils don't support it yet for Vue 2
       - dependency-name: jest
         versions:
-            - ">= 27"
+          - ">= 27"
+
+      # Until we are ready to migrate to Vue 3
+      - dependency-name: vue
+        versions:
+          - ">= 3"
 
       # Is Vue 3 only
-      -   dependency-name: vue
-          versions:
-            - ">= 2.7.14"
-
       - dependency-name: vue-loader
         versions:
-            - ">= 16"
+          - ">= 16"
 
       - dependency-name: portal-vue
         versions:
-            - ">= 3"
+          - ">= 3"
 
       # Can't be used as CommonJs but only ESM which will break our FE build atm
       - dependency-name: chalk
         versions:
-            - ">= 5"
+          - ">= 5"
     labels:
       - dependencies:yarn
 
