--- a/demosplan/DemosPlanCoreBundle/Resources/config/services.yml
+++ b/demosplan/DemosPlanCoreBundle/Resources/config/services.yml
@@ -1328,3 +1328,7 @@ services:
 
     # TODO: This line needs to be removed when the fix is implemented, for now this enables the usage of addons.
     DemosEurope\DemosplanAddon\Permission\PermissionEvaluatorInterface: '@demosplan\DemosPlanCoreBundle\Permissions\Permissions'
+
+    DemosEurope\DemosplanAddon\DemosPipes\Repository\AnnotatedStatementPdfRepository:
+        arguments:
+            $class: 'Doctrine\ORM\Mapping\ClassMetadata'
