Feat(refs T30254): Vueify AdminstrationNew view
* feat(refs T30254): Move addon component to addon repo
* feat(refs T30254): Use permission instead of project
* feat(refs T30254): Add addon wrapper
* feat(refs T30254): Remove period hint as prop (It makes more sense to overwrite in translations than to have it as a prop.)
* feat(refs T30254): Remove internalnote as prop (The same values can be used for all projects, so we don't need a prop here. Also fixes a bug where internalnote couldn't be save, because the id and name were wrong (ref T30975).)
* feat(refs T30254): Rename blueprint hint (We decided to use 'procedure template' instead of blueprint and should use it for new props.)

refs: ADO1740

:info: 
We decided to show the period in new procedures for every project, because it is just an optional field and we want to keep the logic for permissions as simple as possible.

---------

Co-authored-by: Demos-CI <devops-system+github@demos-deutschland.de>
Co-authored-by: salisdemos <40487461+salisdemos@users.noreply.github.com>
Co-authored-by: spiess-demos <40452344+spiess-demos@users.noreply.github.com>

--- a/demosplan/DemosPlanCoreBundle/Resources/config/permissions.yml
+++ b/demosplan/DemosPlanCoreBundle/Resources/config/permissions.yml
@@ -1551,6 +1551,7 @@ feature_procedure_sort_orga_name:
     parent: area_main_procedures
 feature_procedure_templates:
     description: 'if enanbeld the user has an select field in the new procedure page to select boilerplates (Blaupausen)'
+    expose: true
     label: 'enables boilerplates selector'
     loginRequired: true
     parent: area_main_procedures
@@ -2253,6 +2254,7 @@ feature_use_data_input_orga:
     loginRequired: false
 feature_use_plis:
     description: 'Fetch procedure bounding box from external service plis'
+    expose: true
     label: 'Fetch procedure bounding box from external service plis'
     loginRequired: true
 feature_use_xplanbox:
