--- a/.env
+++ b/.env
@@ -55,7 +55,7 @@ JWT_PASSPHRASE=0699e1b59a14e6fec876c06cb8279190
 ###< lexik/jwt-authentication-bundle ###
 
 ###> php-amqplib/rabbitmq-bundle ###
-RABBITMQ_URL=amqp://guest:guest@localhost:5672
+# You need to define RABBITMQ_URL in your .env.local
 ###< php-amqplib/rabbitmq-bundle ###
 
 ###> sentry/sentry-symfony ###
