feat: introduce parameter honeypot_timeout

--- a/demosplan/DemosPlanCoreBundle/Resources/config/parameters_default.yml
+++ b/demosplan/DemosPlanCoreBundle/Resources/config/parameters_default.yml
@@ -340,6 +340,8 @@ parameters:
 
     # disable honeypot check
     honeypot_disabled: false
+    # minimum time needed to fill out form fields to slow down brute force
+    honeypot_timeout: 2
     # Key, der für den Aufruf des Maintenancetasks z.B. per Cron mit übergeben werden muss
     maintenance_key: ""
 
