build: Disallow discovery composer plugin
Since we're not adding dependencies very often
and do our own research on what they need when we
configure them, there is no need for this
plugin to run and check if it can help us.

--- a/composer.json
+++ b/composer.json
@@ -188,7 +188,8 @@
             "composer/package-versions-deprecated": true,
             "symfony/flex": true,
             "demos-europe/demosplan-addon-installer": true,
-            "bamarni/composer-bin-plugin": true
+            "bamarni/composer-bin-plugin": true,
+            "php-http/discovery": false
         }
     },
     "conflict": {
