--- a/demosplan/DemosPlanCoreBundle/Resources/config/parameters_default.yml
+++ b/demosplan/DemosPlanCoreBundle/Resources/config/parameters_default.yml
@@ -476,15 +476,10 @@ parameters:
     # Allows to define links, that will be presented in a special section on the main page.
     # Note that the data will be used in the frontend directly, i.e. no measures against potentially harmful
     # scripts is taken if such thing is used here.
-<<<<<<<<< Temporary merge branch 1
-    main_page_external_links:
-        DiPlan Portal: 'https://diplanportal-dev.demos-europe.eu/'
-        DiPlanCockpit: ''
-
-=========
     # It can be used as follows:
     # external_links:
     #     Name of some website: https://link-to-the-website.net
     #     Some other website: https://link-to-some-other-website.net
-    external_links: []
->>>>>>>>> Temporary merge branch 2
+    external_links:
+        DiPlan Portal: 'https://diplanportal-dev.demos-europe.eu/'
+        DiPlanCockpit: 'http://hh.cockpit.diplanung.de'
