feat(T31035): use the empty array as a default value by external_links
#ADO 1937

--- a/demosplan/DemosPlanCoreBundle/Resources/config/parameters_default.yml
+++ b/demosplan/DemosPlanCoreBundle/Resources/config/parameters_default.yml
@@ -480,6 +480,4 @@ parameters:
     # external_links:
     #     Name of some website: https://link-to-the-website.net
     #     Some other website: https://link-to-some-other-website.net
-    external_links:
-        DiPlan Portal: 'https://diplanportal-dev.demos-europe.eu/'
-        DiPlanCockpit: 'http://hh.cockpit.diplanung.de'
+    external_links: []
