feat: use specific users in container to run them rootless

--- a/docker/php8.1-cli-development/Dockerfile
+++ b/docker/php8.1-cli-development/Dockerfile
@@ -37,5 +37,8 @@ RUN mkdir -p /etc/ssh/sshd_config.d
 ADD ./start.sh /
 RUN chmod +x /start.sh
 
+# use www-data as default. On login current user is taken
+USER www-data
+
 WORKDIR /srv/www
 ENTRYPOINT [ "/start.sh" ]
