--- a/docker/elasticsearch7/Dockerfile
+++ b/docker/elasticsearch7/Dockerfile
@@ -1,4 +1,6 @@
-FROM docker.elastic.co/elasticsearch/elasticsearch:7.11.2
+FROM docker.elastic.co/elasticsearch/elasticsearch:7.10.2
 COPY --chown=elasticsearch:elasticsearch elasticsearch.yml /usr/share/elasticsearch/config/
 
 RUN /usr/share/elasticsearch/bin/elasticsearch-plugin install analysis-icu
+
+USER elasticsearch
