--- a/docker/javaservice/Dockerfile
+++ b/docker/javaservice/Dockerfile
@@ -4,8 +4,12 @@ RUN apt update
 RUN apt install clamdscan clamav-freshclam cm-super lmodern texlive-fonts-recommended texlive-plain-generic texlive-humanities texlive-lang-german texlive-latex-recommended texlive-luatex texlive-xetex -y
 RUN freshclam
 
+RUN addgroup -S dplan && adduser -S dplan -G dplan
+
 COPY demosplan.jar /opt/demosplan/demosplan.jar
 COPY override.properties /opt/demosplan/override.properties
+
+RUN chown -R dplan:dplan /opt/demosplan
 
 ADD ./start.sh /
 RUN chmod +x /start.sh
