F (ref:T31336): adjust composer json

--- a/composer.json
+++ b/composer.json
@@ -34,7 +34,7 @@
         "demos-europe/edt-dql": "^0.16.0",
         "demos-europe/edt-extra": "^0.16.0",
         "demos-europe/edt-paths": "^0.16.0",
-        "demos-europe/demosplan-addon": "dev-F_T31336_adjust_and_add_contracts",
+        "demos-europe/demosplan-addon": "dev-main",
         "doctrine/annotations": "^1.13",
         "doctrine/common": "^3.2",
         "doctrine/doctrine-bundle": "^2",
@@ -55,6 +55,7 @@
         "friendsofsymfony/elastica-bundle": "^6",
         "friendsofsymfony/jsrouting-bundle": "^2.2.0",
         "geocoder-php/nominatim-provider": "^5.5",
+        "goetas-webservices/xsd2php-runtime": "^0.2.2",
         "goetas-webservices/xsd2php-runtime": "^0.2.2",
         "guzzlehttp/guzzle": "^7",
         "hslavich/oneloginsaml-bundle": "^2.8",
