F (ref:T31336): autoload missing routes from addon

--- a/demosplan/DemosPlanCoreBundle/Resources/config/routes/annotations.yaml
+++ b/demosplan/DemosPlanCoreBundle/Resources/config/routes/annotations.yaml
@@ -1,4 +1,6 @@
 DemosPlanCore_annotations:
     resource: "../../../../DemosPlanCoreBundle/Controller/"
     type: "annotation"
-
+addon_routes:
+    resource: 'demosplan\DemosPlanCoreBundle\Addon\AddonRouter::loadRoutes'
+    type: service
