--- a/composer.json
+++ b/composer.json
@@ -87,11 +87,13 @@
         "stevenmaguire/oauth2-keycloak": "^3.1",
         "stof/doctrine-extensions-bundle": "^1.2",
         "symfony/asset": "5.*.*",
+        "symfony/browser-kit": "5.*.*",
         "symfony/cache": "5.*.*",
         "symfony/css-selector": "5.*.*",
         "symfony/dependency-injection": "5.*.*",
         "symfony/dom-crawler": "5.*.*",
         "symfony/dotenv": "5.*.*",
+        "symfony/error-handler": "5.*.*",
         "symfony/expression-language": "5.*.*",
         "symfony/filesystem": "5.*.*",
         "symfony/finder": "5.*.*",
@@ -104,6 +106,8 @@
         "symfony/mailer": "5.*.*",
         "symfony/mime": "5.*.*",
         "symfony/monolog-bundle": "^3",
+        "symfony/options-resolver": "5.*.*",
+        "symfony/password-hasher": "5.*.*",
         "symfony/polyfill-apcu": "^1.23",
         "symfony/polyfill-intl-messageformatter": "^1.23",
         "symfony/polyfill-php80": "^1.15",
@@ -115,7 +119,10 @@
         "symfony/security-csrf": "5.*.*",
         "symfony/serializer": "5.*.*",
         "symfony/stopwatch": "5.*.*",
+        "symfony/string": "5.*.*",
         "symfony/templating": "5.*.*",
+        "symfony/translation": "5.*.*",
+        "symfony/twig-bridge": "5.*.*",
         "symfony/twig-bundle": "5.*.*",
         "symfony/validator": "5.*.*",
         "symfony/var-dumper": "5.*.*",
