--- a/demosplan/DemosPlanCoreBundle/Resources/config/services.yml
+++ b/demosplan/DemosPlanCoreBundle/Resources/config/services.yml
@@ -25,8 +25,8 @@ services:
 
     DemosEurope\DemosplanAddon\Contracts\Factory\GisLayerFactoryInterface: '@demosplan\DemosPlanCoreBundle\Logic\Factory\GisLayerFactory'
 
-    DemosEurope\DemosplanAddon\Contracts\Factory\PercentageDistributionFactoryIntferace:
-        class: '@demosplan\DemosPlanCoreBundle\Logic\Factory\PercentageDistributionFactory'
+    DemosEurope\DemosplanAddon\Contracts\Factory\PercentageDistributionFactoryInterface:
+        class: 'demosplan\DemosPlanCoreBundle\Logic\Factory\PercentageDistributionFactory'
 
     DemosEurope\DemosplanAddon\Contracts\Services\ServiceStorageInterface:
         class: 'demosplan\DemosPlanProcedureBundle\Logic\ServiceStorage'
