feature (refs T30254): Renamed class to keep up the naming convention. Adjusted the condition to include the annotations of an addon - to ensure its annotations get included without the need to enable the addon previously - to include frontend builds in one install step.

--- a/demosplan/DemosPlanCoreBundle/Resources/config/routes/annotations.yaml
+++ b/demosplan/DemosPlanCoreBundle/Resources/config/routes/annotations.yaml
@@ -2,5 +2,5 @@ DemosPlanCore_annotations:
     resource: "../../../../DemosPlanCoreBundle/Controller/"
     type: "annotation"
 addon_routes:
-    resource: 'demosplan\DemosPlanCoreBundle\Addon\AddonRouter::loadRoutes'
+    resource: 'demosplan\DemosPlanCoreBundle\Addon\AddonRoutingLoader::loadRoutes'
     type: service
