F (ref:T30530): adjust service yaml

--- a/demosplan/DemosPlanCoreBundle/Resources/config/services.yml
+++ b/demosplan/DemosPlanCoreBundle/Resources/config/services.yml
@@ -195,6 +195,9 @@ services:
     DemosEurope\DemosplanAddon\Contracts\Services\StatementServiceInterface:
         class: demosplan\DemosPlanStatementBundle\Logic\StatementService
 
+    DemosEurope\DemosplanAddon\Contracts\Services\UserServiceInterface:
+        class: 'demosplan\DemosPlanUserBundle\Logic\UserService'
+
     DemosEurope\DemosplanAddon\Contracts\Services\CurrentUserProviderInterface:
         class: demosplan\DemosPlanUserBundle\Logic\CurrentUserService
 
