F t30835 adjusted keycloak data mapping AB#3112
* feat (refs T30835): Using Interface to allow different specific implementations for different use cases.

Rename properties to improve readability
Enhance documentation to improve readability

* feat (refs T30835): improve/adjust logging to make cases visible in log-files.

* feat (refs T30835): fix typo

* feat (refs T30835): Rename properties to improve readability

Roles needs to be client and customer specific. That will specification will be handled in each specific implementation of OzgKeycloakResponseInterface.php

* feat (refs T30835): Use Interface to allow implementation of different specification responses of different clients/customers.

* feat (refs T30835): Enhance documentation

* feat (refs T30835): Adjust mapping to given example

* feat (refs T30835): simplify by remove unnecessary variable

* feat (refs T30835): Remove unnecessary parameter, because this one is already part of the object

* feat (refs T30835): Fix check of existingOrga, because it can be an object or null.

Using this by checking it like a bool makes no sense to me.
Also compare UUID of an Entity instead of the entire object, to avoid false positives.

* feat (refs T30835): Fix check of existingOrga, because it can be an object or null.

Using this by checking it like a bool makes no sense to me.
Also compare UUID of an Entity instead of the entire object, to avoid false positives.

* feat (refs T30835): Keep valueObject simple and just define and use a mapping here.

Incoming is a customer - role relation. This is how it will be mapped but interpreted later on.

* feat (refs T30835): Fix previously implemented bug. Because $ozgKeycloakResponse is needed as parameter here.

* feat (refs T30835): Fix previously implemented bug. Because $ozgKeycloakResponse is needed as parameter here.

* feat (refs T30835): Only allow roles of current customer.

* feat (refs T30835): rename method to improv

--- a/demosplan/DemosPlanCoreBundle/Resources/config/services.yml
+++ b/demosplan/DemosPlanCoreBundle/Resources/config/services.yml
@@ -518,6 +518,8 @@ services:
 
     demosplan\DemosPlanCoreBundle\Resources\config\GlobalConfig: ~
 
+    demosplan\DemosPlanCoreBundle\Security\Authentication\Authenticator\OzgKeycloakAuthenticator: ~
+
     demosplan\DemosPlanCoreBundle\Security\Authentication\Authenticator\LoginFormAuthenticator:
         $authenticator: '@demosplan\DemosPlanUserBundle\Logic\UserMapper'
 
